--- a/src/styles.css
+++ b/src/styles.css
@@ -43,45 +43,29 @@
     --color-background-container: hsl(204deg 100% 3%/ 70%);
     --color-background-header-sidenav: hsl(204deg 100% 3%);
     --color-azul-neon: hsl(186, 100%, 50%);
+    --color-borde-azul-redes: hsl(186, 100%, 50%);
     --border-shadow-interior: hsl(204deg 100% 18%);
-    --border-interior: hsl(186deg 100% 50% / 89%);
+    --border-interior: hsl(186deg 100% 38% / 89%);
     --color-white-text: #fff;
     --color-black-text: #000;
     --color-gray: #737270;
     --color-grisclaro-text: #ccc;
-    --border-shadow-interior-img: hsl(185, 100%, 18%);
-    --backgraund-interior-img: hsl(0, 100%, 0%);
-
-
-    --backgraund-body: hsl(0, 100%, 0%);
-    --backgraund-componets: hsl(204, 100%, 3%);
-    --border-interior: hsl(186deg 100% 50% / 89%);
-    --border-shadow-interior-img: hsl(185, 100%, 18%);
-    --backgraund-interior-img: hsl(0, 100%, 0%);
-
-    --color-blanco-texto: hsl(76, 100%, 100%);
-    --color-negro-texto: hsl(0, 100%, 0%);
-    --color-gris-texto: hsl(0, 0%, 63%);
-    --sombra-cards-personales: hsl(200, 60%, 11%);
-
+    --border-shadow-interior-img: hsl(186deg 100% 6.45%);
+    --backgraund-hover-negro-cards-social: hsl(0, 100%, 0%);
+    --backgraund-cards-personales: #00000000;
+    --sombra-cards-personales: hsl(186, 100%, 50%);
+    --color-cards-personales: hsl(0, 0%, 100%);
     --backgraund-hover-negro-cards-social: hsl(0, 100%, 0%);
     --backgraund-hover-blanco-text-cards-social: hsl(0, 0%, 100%);
     --sombra-cards-personales-hover: hsl(186.12, 95.79%, 24.38%);
-
     --color-naranga-neon: hsl(25, 100%, 50%);
-    --sombra-boton-cv: hsl(24.71, 77.27%, 8.63%);
-
-    /* //////////////header//////////// */
-
-    --color-azul-neon: hsl(186, 100%, 50%);
-    --color-borde-azul: hsl(186, 100%, 50%);
 
 
     /* ///////////////////////about/////////////// */
     --color-texto-title: hsl(0, 0%, 100%);
     --color-texto-blanco: hsl(0, 0%, 67%);
-    --color-b1: linear-gradient(315deg, #3f0028, #3f00281a, transparent);
-    --color-b2: linear-gradient(315deg, #283b00, #283b0003, transparent);
+    --color-b1: linear-gradient(315deg, #3f0028, #280019, #000);
+    --color-b2: linear-gradient(315deg, #283b00, #1b2800, #000);
 
 }
 
@@ -90,15 +74,21 @@
 /* //////////// Dark Tema ///////////////////// */
 body.dark-theme {
     --color-background-container: hsl(0deg 0% 100% / 10%);
-    --color-background-header-sidenav: hsl(204, 100%, 3%) 
-    --color-azul-neon: hsl(186, 100%, 50%);
+    --color-background-header-sidenav: hsl(204, 100%, 3%) --color-azul-neon: hsl(186, 100%, 50%);
     --border-shadow-interior: hsl(0deg 0% 100% / 29%);
     --border-interior: #ccc;
 
+    --border-shadow-interior-img: #000;
+    --color-borde-azul-redes: #000000;
     --color-white-text: #fff;
     --color-black-text: #000;
     --color-gray: #737270;
     --color-grisclaro-text: #ccc;
+    --backgraund-cards-personales: #000;
+    --sombra-cards-personales: #ffffff;
+    --color-cards-personales: hsl(0, 0%, 100%);
+    --backgraund-hover-negro-cards-social: #000;
+    --sombra-cards-personales-hover: hsl(0, 0%, 100%);
 
 
 
