--- a/src/app/componets/perfil/perfil.component.css
+++ b/src/app/componets/perfil/perfil.component.css
@@ -6,7 +6,7 @@
 .container {
     background: var(--color-background-container);
     backdrop-filter: blur(1px);
-        border: 1px solid var(--border-interior);
+    border: 1px solid var(--border-interior);
     margin: 10px;
     position: fixed;
     z-index: 1;
@@ -34,7 +34,7 @@
     max-height: 220px;
     overflow: hidden;
     position: relative;
-    box-shadow: inset 0px 0px 20px 10px hsl(0deg 0% 0.100%);
+    box-shadow: inset 0px 0px 20px 10px var(--border-shadow-interior-img);
 
 }
 
@@ -43,10 +43,10 @@
     width: 270px;
     height: 310px;
     border-radius: 15px;
-    margin-left: -34px;
-    filter: drop-shadow(0px -20px 40px hsl(0deg 0% 0.100%));
+    margin-left: -30px;
+    filter: drop-shadow(0px -5px 15px var(--border-shadow-interior-img));
     transform: rotate(357deg);
-    margin-top: -10px;
+    margin-top: -5px;
     transition: .9s;
 
 
@@ -55,8 +55,7 @@
 .imagen img:hover {
     transform: scale(0.5) translateY(-80px) translateX(35px);
     transition: .9s;
-    box-shadow: inset 0px 0px 18px 0px hsl(0deg 0% 0.100%);
-    filter: drop-shadow(-1px -1px 10px hsl(0deg 0% 0.100%));
+    box-shadow: none;
 
 }
 
@@ -66,7 +65,7 @@ h1 {
     margin-top: 10px;
     margin-bottom: 5px;
     font-size: 20px;
-    color: var(--color-blanco-texto);
+    color: var(--color-white-text);
 }
 
 
@@ -102,41 +101,20 @@ h1 {
     font-size: 25px;
     border-radius: 5px;
     transition: .3s;
-    box-shadow: inset 0px 0px 14px 3px var(--sombra-cards-personales);
+    box-shadow: inset 0px 0px 14px -5px var(--sombra-cards-personales);
+    color: var(--color-cards-personales);
+    background: var(--backgraund-cards-personales);
 
 }
 
 .cardperson i:hover {
     transform: scale(1.1);
     background: var(--backgraund-hover-negro-cards-social);
-    color: var(--backgraund-hover-blanco-text-cards-social);
-    box-shadow: inset 0px 0px 14px 0px var(--sombra-cards-personales-hover);
+    color: var(--color-cards-personales);
+    box-shadow: inset 0px 0px 2px 2px var(--sombra-cards-personales-hover);
 
 }
 
-
-.cardperson .phone {
-    color: var(--color-negro-texto);
-    background: var(--color-blanco-texto);
-}
-
-.cardperson .email {
-
-    color: var(--color-negro-texto);
-    background: var(--color-blanco-texto);
-}
-
-.cardperson .map {
-
-    color: var(--color-negro-texto);
-    background: var(--color-blanco-texto);
-}
-
-.cardperson .regalo {
-
-    color: var(--color-negro-texto);
-    background: var(--color-blanco-texto);
-}
 
 .info_person {
     width: 200px;
@@ -144,41 +122,40 @@ h1 {
 }
 
 .info_person h6 {
-    font-size: 13px;
-    color: var(--color-gris-texto);
+    font-size: 14px;
+    color: var(--color-white-text);
     font-weight: 600;
 }
 
 .info_person p {
-    font-size: 13px;
+    font-size: 14px;
     margin-top: 3px;
-    color: var(--color-gris-texto);
-    font-weight: 600;
+    color: var(--color-grisclaro-text);
+    font-weight: 500;
 
 }
 
 .buttons {
     display: flex;
     justify-content: center;
-    background: var(--backgraund-interior-img);
+    background: var();
     padding: 10px;
     border-radius: 5px;
     margin: 15px 0 15px 0;
     cursor: pointer;
     font-weight: 600;
-    box-shadow: inset 0 0 5px 0.5px var(--border-shadow-interior-img);
-
+    border: 1px solid var(--border-shadow-interior);
+    transition: 0.5s ease-in-out;
 }
 
 .buttons:hover {
-    transform: scale(1.1);
-    box-shadow: inset 0px 0px 6px 2px var(--color-naranga-neon);
-    background: var(--sombra-boton-cv);
+    transform: scale(1.2);
+    box-shadow: inset 0px 0px 6px 2px var(--border-shadow-interior);
 
 }
 
 .buttons .button_flex {
-    color: #fff;
+    color: var(--color-white-text);
     text-decoration: none;
 }
 
@@ -187,7 +164,6 @@ h1 {
     .container {
         margin: 10px;
         position: relative;
-        top: 110px;
         left: 0;
         display: flex;
         width: 95%;
@@ -204,7 +180,7 @@ h1 {
     .imagen img {
         width: 270px;
         height: 330px;
-        transform: rotate(357deg) translateY(-20px);
+        transform: rotate(357deg) translateY(-10px);
 
     }
 
