--- a/src/styles.css
+++ b/src/styles.css
@@ -8,32 +8,14 @@
     font-family: "Ubuntu", sans-serif;
     list-style: none;
 }
-
-
-.background-image {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    z-index: -1;
+body{
+    background: #000;
 }
 
-.background-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+
 
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgb(0 0 0 / 90%);
-    z-index: -1;
+
 }
 
 
@@ -64,8 +46,8 @@
     /* ///////////////////////about/////////////// */
     --color-texto-title: hsl(0, 0%, 100%);
     --color-texto-blanco: hsl(0, 0%, 67%);
-    --color-b1: linear-gradient(315deg, #3f0028, #280019, #000);
-    --color-b2: linear-gradient(315deg, #283b00, #1b2800, #000);
+    --color-b1: linear-gradient(315deg, #3f0028, #28001977, transparent);
+    --color-b2: linear-gradient(315deg, #283b00, #1b280083, transparent);
 
 }
 
@@ -74,7 +56,8 @@
 /* //////////// Dark Tema ///////////////////// */
 body.dark-theme {
     --color-background-container: hsl(0deg 0% 100% / 10%);
-    --color-background-header-sidenav: hsl(204, 100%, 3%) --color-azul-neon: hsl(186, 100%, 50%);
+    --color-background-header-sidenav: hsl(0, 0%, 0%);
+    --color-azul-neon: hsl(186, 100%, 50%);
     --border-shadow-interior: hsl(0deg 0% 100% / 29%);
     --border-interior: #ccc;
 
