se modific o algunas cosas

--- a/src/app/componets/perfil/perfil.component.css
+++ b/src/app/componets/perfil/perfil.component.css
@@ -145,6 +145,8 @@ h1 {
     cursor: pointer;
     font-weight: 600;
     border: 1px solid var(--border-interior);
+    box-shadow: inset 0px 0px 6px 2px var(--border-shadow-interior);
+
     transition: 0.5s ease;
 }
 
